--- a/style.css
+++ b/style.css
@@ -29,12 +29,17 @@ margin: 2%;
 html{
 text-align: center;
 background-color: #af60286c;
-display: flex
-align-items: center;
-height: 100vh;
-justify-content: center;
+
+
+
+}
+table{
+    a;
+}
+tr{
+  
 }
 th{
     text-align: center;
-    margin-right: auto;
+   
 }
